// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's addToWishlist destination action: all fields 1`] = `
Object {
  "channel_type": "0ON[O$XBU3K!AzrrU",
  "device": Object {
    "advertising_id": "0ON[O$XBU3K!AzrrU",
    "ip": "0ON[O$XBU3K!AzrrU",
    "language": "0ON[O$XBU3K!AzrrU",
    "model": "0ON[O$XBU3K!AzrrU",
    "os": "0ON[O$XBU3K!AZRRU",
    "os_version": "0ON[O$XBU3K!AzrrU",
    "ua": "0ON[O$XBU3K!AzrrU",
    "unique_device_id": "0ON[O$XBU3K!AzrrU",
  },
  "event_type": "ADD_TO_WISHLIST",
  "id": "0ON[O$XBU3K!AzrrU",
  "items": Array [
    Object {
      "id": "0ON[O$XBU3K!AzrrU",
      "price": Object {
        "amount": 55442654007132.16,
        "currency": "VND",
      },
      "quantity": 5544265400713216,
      "seller_id": "0ON[O$XBU3K!AzrrU",
    },
  ],
  "page_id": "0ON[O$XBU3K!AzrrU",
  "revenue": Object {
    "amount": 55442654007132.16,
    "currency": "VND",
  },
  "session_id": "0ON[O$XBU3K!AzrrU",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "0ON[O$XBU3K!AzrrU",
}
`;

exports[`Testing snapshot for MolocoRmp's addToWishlist destination action: required fields 1`] = `
Object {
  "channel_type": "0ON[O$XBU3K!AzrrU",
  "event_type": "ADD_TO_WISHLIST",
  "id": "0ON[O$XBU3K!AzrrU",
  "items": Array [
    Object {
      "id": "0ON[O$XBU3K!AzrrU",
    },
  ],
  "page_id": "0ON[O$XBU3K!AzrrU",
  "session_id": "0ON[O$XBU3K!AzrrU",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "0ON[O$XBU3K!AzrrU",
}
`;
